# GitSmith

./: README.md  pyproject.toml
src/: main.py
src/agents/: tools.py
src/sandbox/: runner.py
ui/: index.html
